--- a/llm_experiment.ipynb
+++ b/llm_experiment.ipynb
@@ -99,7 +99,8 @@
    "outputs": [],
    "source": [
     "LLM_MODEL = \"gpt-4o-mini\"\n",
-    "model = YOLO(\"yolo11n.pt\")\n",
+    "MODEL_NAME =\"yolo11n.pt\" \n",
+    "model = YOLO(MODEL_NAME)\n",
     "FONT_PATH = \"data/Virgil.ttf\"  # Path to your .ttf font file\n",
     "\n",
     "INTERIOR_CLASSES = {\n",
@@ -481,7 +482,6 @@
     "    padding = dynamic_size / 1.5\n",
     "    border_width = dynamic_size // 4\n",
     "    \n",
-    "    image_width, image_height = image.size \n",
     "\n",
     "    # Keep track of previous bounding boxes drawn for collision prevention\n",
     "    previous_boxes = []\n",
@@ -569,18 +569,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.9"
   }
  },
  "nbformat": 4,
